--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Another synchronization framework",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "opendoc": "gulp doc && open docs/classes.list.html",
     "start": "gulp"
   },
@@ -17,11 +17,33 @@
   "dependencies": {
     "wolfy87-eventemitter": "5.1.0"
   },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/jest-preprocessor.js",
+    "setupTestFrameworkScriptFile": "./jest-test-framework-setup.js",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|coffee)$",
+    "testPathDirs": [
+      "<rootDir>/lib"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "coffee"
+    ]
+  },
   "devDependencies": {
+    "babel-jest": "^16.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-plugin-transform-strict-mode": "^6.11.3",
+    "babel-preset-es2015": "^6.16.0",
+    "bluebird": "3.4.6",
+    "coffee-coverage": "^1.0.1",
     "coffee-script": "1.10.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
     "gulp-coffee": "2.3.2",
-    "jsdoc": "3.4.1",
-    "lodash": "4.15.0"
+    "gulp-jsdoc3": "^1.0.0",
+    "jest": "^16.0.1",
+    "lodash": "4.15.0",
+    "lolex": "1.5.1"
   }
 }
