修复在 node_modules 目录下时 webpack 无法编译的 BUG

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "opendoc": "gulp doc && open docs/classes.list.html",
-    "start": "gulp"
+    "start": "gulp",
+    "build": "yarn add webpack --dev && yarn webpack"
   },
   "keywords": [
     "synchronization",
