--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "jest": {
     "scriptPreprocessor": "<rootDir>/jest-preprocessor.js",
     "setupTestFrameworkScriptFile": "./jest-test-framework-setup.js",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|coffee)$",
+    "testRegex": "(/__tests__/[^(\\/_)]*|\\.(test|spec))\\.(js|coffee)$",
     "testPathDirs": [
       "<rootDir>/lib"
     ],
@@ -32,7 +32,7 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^16.0.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
@@ -44,7 +44,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-coffee": "2.3.2",
     "gulp-jsdoc3": "^1.0.0",
-    "jest": "^16.0.1",
+    "jest": "^18.1.0",
     "lodash": "4.15.0",
     "lolex": "1.5.1",
     "webpack": "^1.13.2"
