--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
   "plugins": [
+    ["transform-class-properties"],
+    ["transform-object-rest-spread"],
     ["transform-strict-mode", {
       "strict": true
-    }],
-    ["transform-object-rest-spread"]
+    }]
   ],
   "presets": ["es2015"]
 }
