--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "plugins": [
-    ["transform-class-properties"],
-    ["transform-object-rest-spread"],
-    ["transform-strict-mode", {
-      "strict": true
-    }]
-  ],
-  "presets": ["es2015"]
+  "presets": ["./.babelrc.js"]
 }
