--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "thinker-js",
-  "version": "0.3.2",
+  "version": "1.0.0",
   "description": "Another synchronization framework",
   "main": "dist/main.js",
+  "jsnext:main": "./lib/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --no-cache",
     "opendoc": "gulp doc && open docs/classes.list.html",
     "start": "gulp",
-    "build": "webpack"
+    "build": "webpack --progress"
   },
   "keywords": [
     "synchronization",
@@ -19,11 +20,16 @@
     "wolfy87-eventemitter": "5.1.0"
   },
   "jest": {
-    "scriptPreprocessor": "<rootDir>/jest-preprocessor.js",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
     "setupTestFrameworkScriptFile": "./jest-test-framework-setup.js",
     "testRegex": "(/__tests__/[^_].*|\\.(test|spec))\\.(js|coffee)$",
-    "testPathDirs": [
+    "roots": [
       "<rootDir>/lib"
+    ],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!lodash-es/)"
     ],
     "moduleFileExtensions": [
       "js",
@@ -32,22 +38,27 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-jest": "^23.4.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-env": "^1.7.0",
     "bluebird": "3.4.6",
     "coffee-coverage": "^1.0.1",
     "coffee-script": "1.10.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.1",
     "gulp-coffee": "2.3.2",
     "gulp-jsdoc3": "^1.0.0",
-    "jest": "^18.1.0",
+    "jest": "^23.4.1",
     "lodash": "4.15.0",
+    "lodash-es": "^4.17.10",
     "lolex": "1.5.1",
-    "webpack": "^3.4.1"
+    "webpack": "^4.16.1",
+    "webpack-command": "^0.4.1"
+  },
+  "peerDependencies": {
+    "lodash-es": "^4.17.10"
   }
 }
